--- a/index.html
+++ b/index.html
@@ -16,18 +16,15 @@ line is
 also a comment*/  
 
 
-var myName;
-var a;
-a = 7;
-var a;
-a = 7;
-var b;
-b = a ;
-var a = 9;
+// Only change code below this line
+var a=5;
+var b=10;
+var c = "I am a";
+// Only change code above this line
 
-var myFirstName = "Ram";
-var myLastName = "Siya";
-
+a = a + 1;
+b = b + 5;
+c = c + " String!";
 
     </script>
 </body>
