--- a/index.html
+++ b/index.html
@@ -10,20 +10,8 @@
 <body>
     <script>
       // This line is comment
-
-/*This 
-line is
-also a comment*/  
-
-// Variable declarations
-var studlyCapVar ;
-var properCamelCase;
-var titleCaseOver;
-
-// Variable assignments
-studlyCapVar = 10;
-properCamelCase = "A String";
-titleCaseOver = 9000;
+      let catName = "Oliver";
+let catSound = "Meow!";
     </script>
 </body>
 </html>
