--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <script>
-      // This line is comment
-      let catName = "Oliver";
-let catSound = "Meow!";
+  const FCC = "freeCodeCamp"; // Change this line
+let fact = "is cool!"; // Change this line
+fact = "is awesome!";
+console.log(FCC, fact); // Change this line
     </script>
 </body>
 </html>
