--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
 </head>
 <body>
     <script>
-const sum = 10 + 10;
-const difference = 45 - 33;
-const product = 8 * 10;
-const quotient = 66 / 33;
-
-let myVar = 11;
+const ourDecimal = 5.7;
 
 // Only change code below this line
-myVar--;
+let myDecimal =5.7;
     </script>
 </body>
 </html>
