--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ const ourDecimal = 5.7;
 
 // Only change code below this line
 let myDecimal =5.7;
+const product = 2.0 * 2.5;
     </script>
 </body>
 </html>
