--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ const ourDecimal = 5.7;
 // Only change code below this line
 let myDecimal =5.7;
 const product = 2.0 * 2.5;
+const quotient = 4.4 / 2.0; // Change this line
     </script>
 </body>
 </html>
