--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ const ourDecimal = 5.7;
 let myDecimal =5.7;
 const product = 2.0 * 2.5;
 const quotient = 4.4 / 2.0; // Change this line
+const remainder = 11 %3;
     </script>
 </body>
 </html>
