--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
 </head>
 <body>
     <script>
-let a = 48;
-let b = 108;
-let c = 33;
-
-// Only change code below this line
-a /= 12;
-b /= 4;
-c /= 11;
+const myStr = "I am a \"double quoted\" string inside \"double quotes\"."; // Change this line
     </script>
 </body>
 </html>
