--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <script>
-const myStr = "I am a \"double quoted\" string inside \"double quotes\"."; // Change this line
+const myStr = '<a href="http://www.example.com" target="_blank">Link</a>';
     </script>
 </body>
 </html>
