--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <script>
-const myStr = "FirstLine\n\t\\SecondLine\nThirdLine"; // Change this line
+const myStr = "This is the start."+" "+"This is the end."; // Change this line
     </script>
 </body>
 </html>
