concatination of two strings using += operator

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <script>
-const myStr = "This is the start."+" "+"This is the end."; // Change this line
+let myStr = "This is the first sentence."
+myStr += " This is the second sentence.";
     </script>
 </body>
 </html>
