concatination of two strings using variables

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <script>
-let myStr = "This is the first sentence."
-myStr += " This is the second sentence.";
+// Only change code below this line
+const myName = "Shashank Rai";
+const myStr = "My name is " + myName+" and I am well!";
     </script>
 </body>
 </html>
