appending variables to strings

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <script>
-// Only change code below this line
-const myName = "Shashank Rai";
-const myStr = "My name is " + myName+" and I am well!";
+// Change code below this line
+const someAdjective = "Fun";
+let myStr = "Learning to code is ";
+myStr+=someAdjective;
     </script>
 </body>
 </html>
