--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <script>
-// Change code below this line
-const someAdjective = "Fun";
-let myStr = "Learning to code is ";
-myStr+=someAdjective;
+// Setup
+let lastNameLength = 0;
+const lastName = "Lovelace";
+
+// Only change code below this line
+lastNameLength = lastName.length;
     </script>
 </body>
 </html>
