strings first letter

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <script>
 // Setup
-let lastNameLength = 0;
+let firstLetterOfLastName = "";
 const lastName = "Lovelace";
 
 // Only change code below this line
-lastNameLength = lastName.length;
+firstLetterOfLastName = lastName[0]; // Change this line
     </script>
 </body>
 </html>
