--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <script>
 // Setup
-let firstLetterOfLastName = "";
-const lastName = "Lovelace";
+// Setup
+let myStr = "Jello World";
 
 // Only change code below this line
-firstLetterOfLastName = lastName[0]; // Change this line
+myStr = "Hello World"; // Change this line
+// Only change code above this line
     </script>
 </body>
 </html>
