--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <body>
     <script>
 // Setup
-// Setup
-let myStr = "Jello World";
+const lastName = "Lovelace";
 
 // Only change code below this line
-myStr = "Hello World"; // Change this line
-// Only change code above this line
+const thirdLetterOfLastName = lastName[2]; // Change this line
     </script>
 </body>
 </html>
