--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 const lastName = "Lovelace";
 
 // Only change code below this line
-const thirdLetterOfLastName = lastName[2]; // Change this line
+const lastLetterOfLastName = lastName[lastName.length-1]; // Change this line
     </script>
 </body>
 </html>
