--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <script>
-// Setup
-const lastName = "Lovelace";
+const myNoun = "dog";
+const myAdjective = "big";
+const myVerb = "ran";
+const myAdverb = "quickly";
 
 // Only change code below this line
-const secondToLastLetterOfLastName = lastName[lastName.length-2]; // Change this line
+const wordBlanks = myAdjective +" "+myNoun+" "+" "+myVerb+" "+myAdverb; // Change this line
+// Only change code above this line
     </script>
 </body>
 </html>
