--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 </head>
 <body>
     <script>
-const myNoun = "dog";
-const myAdjective = "big";
-const myVerb = "ran";
-const myAdverb = "quickly";
-
 // Only change code below this line
-const wordBlanks = myAdjective +" "+myNoun+" "+" "+myVerb+" "+myAdverb; // Change this line
-// Only change code above this line
+const myArray = ["bread",30,"hello",true];
     </script>
 </body>
 </html>
