Nest one Array within Another Array

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <script>
 // Only change code below this line
-const myArray = ["bread",30,"hello",true];
+const myArray = [["Bulls", 23], ["White Sox", 45]];
     </script>
 </body>
 </html>
