--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <script>
-// Only change code below this line
-const myArray = [["Bulls", 23], ["White Sox", 45]];
+const myArray = [50, 60, 70];
+let myData = myArray[0];
+
     </script>
 </body>
 </html>
