--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <script>
-const myArray = [50, 60, 70];
-let myData = myArray[0];
+// Setup
+const myArray = [18, 64, 99];
+
+// Only change code below this line
+myArray[0] = 45;
 
     </script>
 </body>
