--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <script>
-// Setup
-const myArray = [18, 64, 99];
+const myArray = [
+  [1, 2, 3],
+  [4, 5, 6],
+  [7, 8, 9],
+  [[10, 11, 12], 13, 14],
+];
 
-// Only change code below this line
-myArray[0] = 45;
+const myData = myArray[2][1];
 
     </script>
 </body>
