Manipulate Arrays With pop()

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script>
 // Setup
 const myArray = [["John", 23], ["cat", 2]];
-myArray.push(["dog",3])
+const removedFromMyArray = myArray.pop();
 // Only change code below this line
 
 
