--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <script>
 // Setup
-const myArray = [["John", 23], ["cat", 2]];
-const removedFromMyArray = myArray.pop();
-// Only change code below this line
+const myArray = [["John", 23], ["dog", 3]];
 
+// Only change code below this line
+const removedFromMyArray = myArray.shift();
 
     </script>
 </body>
