--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 const myArray = [["John", 23], ["dog", 3]];
 
 // Only change code below this line
-const removedFromMyArray = myArray.shift();
+myArray.shift();
+myArray.unshift(["Paul", 35]);
 
     </script>
 </body>
