--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 </head>
 <body>
     <script>
-// Setup
-const myArray = [["John", 23], ["dog", 3]];
-
-// Only change code below this line
-myArray.shift();
-myArray.unshift(["Paul", 35]);
-
+const myList = [["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15]];
     </script>
 </body>
 </html>
