Write Reusable JavaScript with Functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <script>
-const myList = [["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15],["Chocolate Bar", 15]];
+function reusableFunction(){
+  console.log("Hi World");
+}
+
+reusableFunction();
     </script>
 </body>
 </html>
