Passing Values to Functions with Arguments

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <script>
-function reusableFunction(){
-  console.log("Hi World");
-}
 
-reusableFunction();
+function functionWithArgs(a,b){
+  console.log(a+b);
+}
+functionWithArgs(10,15);
     </script>
 </body>
 </html>
