Return a Value from a Function with Return

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <script>
 
-function functionWithArgs(a,b){
-  console.log(a+b);
+function timesFive(num){
+  return num*5;
 }
-functionWithArgs(10,15);
+console.log(timesFive(10));
     </script>
 </body>
 </html>
