--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 </head>
 <body>
     <script>
-// Setup
-const outerWear = "T-Shirt";
+/// Setup
+let sum = 0;
 
-function myOutfit() {
-  // Only change code below this line
-let outerWear = "sweater";
-  // Only change code above this line
-  return outerWear;
+function addThree() {
+  sum = sum + 3;
 }
 
-myOutfit();
+// Only change code below this line
+function addFive(){
+  sum+=5;
+}
+
+// Only change code above this line
+
+addThree();
+addFive();
     </script>
 </body>
 </html>
