--- a/index.html
+++ b/index.html
@@ -9,22 +9,15 @@
 </head>
 <body>
     <script>
-/// Setup
-let sum = 0;
+// Setup
+let processed = 0;
 
-function addThree() {
-  sum = sum + 3;
+function processArg(num) {
+  return (num + 3) / 5;
 }
 
 // Only change code below this line
-function addFive(){
-  sum+=5;
-}
-
-// Only change code above this line
-
-addThree();
-addFive();
+processed = processArg(7);
     </script>
 </body>
 </html>
