--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
     <script>
-// Setup
-let processed = 0;
-
-function processArg(num) {
-  return (num + 3) / 5;
+function nextInLine(arr, item) {
+  // Only change code below this line
+  arr.push(item);
+  item = arr.shift();
+  return item;
+  // Only change code above this line
 }
 
-// Only change code below this line
-processed = processArg(7);
+// Setup
+const testArr = [1, 2, 3, 4, 5];
+
+// Display code
+console.log("Before: " + JSON.stringify(testArr));
+console.log(nextInLine(testArr, 6));
+console.log("After: " + JSON.stringify(testArr));
     </script>
 </body>
 </html>
