--- a/index.html
+++ b/index.html
@@ -9,21 +9,13 @@
 </head>
 <body>
     <script>
-function nextInLine(arr, item) {
+function welcomeToBooleans() {
   // Only change code below this line
-  arr.push(item);
-  item = arr.shift();
-  return item;
+
+  return true; // Change this line
+
   // Only change code above this line
 }
-
-// Setup
-const testArr = [1, 2, 3, 4, 5];
-
-// Display code
-console.log("Before: " + JSON.stringify(testArr));
-console.log(nextInLine(testArr, 6));
-console.log("After: " + JSON.stringify(testArr));
     </script>
 </body>
 </html>
