--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 </head>
 <body>
     <script>
-function welcomeToBooleans() {
+function trueOrFalse(wasThatTrue) {
   // Only change code below this line
+if(wasThatTrue){
+  return "Yes, that was true";
+}else{
+  return "No, that was false";
+}
 
-  return true; // Change this line
 
   // Only change code above this line
+
 }
     </script>
 </body>
