Comparison with the Equality Operator

--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
 </head>
 <body>
     <script>
-function trueOrFalse(wasThatTrue) {
-  // Only change code below this line
-if(wasThatTrue){
-  return "Yes, that was true";
-}else{
-  return "No, that was false";
+// Setup
+function testEqual(val) {
+  if (val == 12) { // Change this line
+    return "Equal";
+  }
+  return "Not Equal";
 }
 
-
-  // Only change code above this line
-
-}
+testEqual(10);
     </script>
 </body>
 </html>
