--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <script>
 // Setup
-function compareEquality(a, b) {
-  if (a === b) { // Change this line
-    return "Equal";
+function testNotEqual(val) {
+  if (val != 99) { // Change this line
+    return "Not Equal";
   }
-  return "Not Equal";
+  return "Equal";
 }
 
-compareEquality(10, "10");
+testNotEqual(10);
     </script>
 </body>
 </html>
