--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <script>
 // Setup
-function testNotEqual(val) {
-  if (val != 99) { // Change this line
+function testStrictNotEqual(val) {
+  if (val !== 17) { // Change this line
     return "Not Equal";
   }
   return "Equal";
 }
 
-testNotEqual(10);
+testStrictNotEqual(10);
     </script>
 </body>
 </html>
