--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
 </head>
 <body>
     <script>
-const names = ["Hole-in-one!", "Eagle", "Birdie", "Par", "Bogey", "Double Bogey", "Go Home!"];
-
-function golfScore(par, strokes) {
+function caseInSwitch(val) {
+  let answer = "";
   // Only change code below this line
-if(strokes === 1)
-return names[0];
-else if(strokes<=par-2){
-return names[1];
-}else if(strokes == par-1)
-return names[2];
-else if(strokes == par)
-return names[3];
-else if(strokes == par+1)
-return names[4];
-else if(strokes == par+2)
-return names[5];
-else if(strokes >= par+3)
-return names[6];
+switch (val){
+  case 1:
+  answer = "alpha";
+  break;
+   case 2:
+  answer = "beta";
+  break;
+   case 3:
+  answer = "gamma";
+  break;
+   case 4:
+  answer = "delta";
+  break;
+   
 
-  
-  // Only change code above this line
 }
 
-golfScore(5, 4);
+
+  // Only change code above this line
+  return answer;
+}
+
+caseInSwitch(1);
     </script>
 </body>
 </html>
