--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@ function caseInSwitch(val) {
   let answer = "";
   // Only change code below this line
 switch (val){
-  case 1:
-  answer = "alpha";
+  case "a":
+  answer = "apple";
   break;
-   case 2:
-  answer = "beta";
+   case "b":
+  answer = "bird";
   break;
-   case 3:
-  answer = "gamma";
+   case "c":
+  answer = "cat";
   break;
-   case 4:
-  answer = "delta";
-  break;
+   default:
+    answer = "stuff";
    
 
 }
