Multiple Identical Options in Switch Statements

--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
     <script>
-function caseInSwitch(val) {
+function sequentialSizes(val) {
   let answer = "";
   // Only change code below this line
-switch (val){
-  case "a":
-  answer = "apple";
-  break;
-   case "b":
-  answer = "bird";
-  break;
-   case "c":
-  answer = "cat";
-  break;
-   default:
-    answer = "stuff";
-   
-
+switch (val) {
+  case 1:
+  case 2:
+  case 3:
+    answer ="Low";
+    break;
+  case 4:
+  case 5:
+  case 6:
+    answer = "Mid";
+    break;
+    case 7:
+    case 8:
+    case 9:
+    answer="High";
+    break;
 }
 
 
@@ -33,7 +35,7 @@ switch (val){
   return answer;
 }
 
-caseInSwitch(1);
+sequentialSizes(1);
     </script>
 </body>
 </html>
