--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
 </head>
 <body>
     <script>
-function sequentialSizes(val) {
+function chainToSwitch(val) {
   let answer = "";
   // Only change code below this line
-switch (val) {
-  case 1:
-  case 2:
-  case 3:
-    answer ="Low";
+  switch (val) {
+  case "bob":
+    answer = "Marley";
     break;
-  case 4:
-  case 5:
-  case 6:
-    answer = "Mid";
+  case 42:
+   answer = "The Answer";
     break;
-    case 7:
-    case 8:
-    case 9:
-    answer="High";
+   case 1:
+     answer = "There is no #1";
     break;
+    case 99:
+     answer = "Missed me by this much!";
+    break;
+     case 7:
+     answer = "Ate Nine";
+    break;
+ 
 }
 
 
@@ -35,7 +36,7 @@ switch (val) {
   return answer;
 }
 
-sequentialSizes(1);
+chainToSwitch(7);
     </script>
 </body>
 </html>
