--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
 </head>
 <body>
     <script>
-// Setup
-function abTest(a, b) {
+let count = 0;
+
+function cc(card) {
   // Only change code below this line
 
-if(a<0 || b<0)
-return 
+  if(card >=2 && card<=6)
+  count++;
+  else if(card == 10 || card =="J" || card == "Q" || card == "K" || card == "A")
+  count--;
+let res;
+  if(count>=1){
+    res = count + " Bet";
+    return res;
+  }else if(count<=0){
 
+    res =  count + " Hold";
+    return res;
+  }
   // Only change code above this line
-
-  return Math.round(Math.pow(Math.sqrt(a) + Math.sqrt(b), 2));
 }
 
-abTest(2,2);
+cc(2); cc(3); cc(7); cc('K'); cc('A');
     </script>
 </body>
 </html>
