Accessing Object Properties with Dot Notation

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <script>
-const myDog = {
-  // Only change code below this line
-"name":"doggy",legs:32,tails:4,friends:[23,543]
-
-  // Only change code above this line
+// Setup
+const testObj = {
+  "hat": "ballcap",
+  "shirt": "jersey",
+  "shoes": "cleats"
 };
+
+// Only change code below this line
+const hatValue = testObj.hat;      // Change this line
+const shirtValue = testObj.shirt;    // Change this line
     </script>
 </body>
 </html>
