Delete Properties from a JavaScript Object

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <script>
+// Setup
 const myDog = {
   "name": "Happy Coder",
   "legs": 4,
   "tails": 1,
-  "friends": ["freeCodeCamp Campers"]
+  "friends": ["freeCodeCamp Campers"],
+  "bark": "woof"
 };
 
-myDog.bark = "woof";
-
-
+// Only change code below this line
+delete myDog.tails;
     </script>
 </body>
 </html>
