--- a/index.html
+++ b/index.html
@@ -10,29 +10,15 @@
 <body>
     <script>
 
-        // Setup
-function phoneticLookup(val) {
-  let result = "";
-
+function checkObj(obj, checkProp) {
   // Only change code below this line
-   const lookup = {
-    
-    "alpha":"Adams", 
-    "bravo" : "Boston", 
-    "charlie" : "Chicago",
-    "delta": "Denver",
-    "echo":"Easy",
-    "foxtrot":"Frank",
-
+ if (obj.hasOwnProperty(checkProp)) {
+    return obj[checkProp];
+  } else {
+    return "Not Found";
   }
-
-  result = lookup[val];
-
   // Only change code above this line
-  return result;
 }
-
-phoneticLookup("charlie");
     </script>
 </body>
 </html>
