--- a/index.html
+++ b/index.html
@@ -10,15 +10,30 @@
 <body>
     <script>
 
-function checkObj(obj, checkProp) {
-  // Only change code below this line
- if (obj.hasOwnProperty(checkProp)) {
-    return obj[checkProp];
-  } else {
-    return "Not Found";
+const myMusic = [
+  {
+    "artist": "Billy Joel",
+    "title": "Piano Man",
+    "release_year": 1973,
+    "formats": [
+      "CD",
+      "8T",
+      "LP"
+    ],
+    "gold": true
+  },
+   {
+    "artist": "Billy Joel",
+    "title": "Piano Man",
+    "release_year": 1973,
+    "formats": [
+      "CD",
+      "8T",
+      "LP"
+    ],
+    "gold": true
   }
-  // Only change code above this line
-}
+];
     </script>
 </body>
 </html>
