--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 const myArray = [];
 
 // Only change code below this line
-let i=5;
-while(i>=0){
-  myArray.push(i--);
-}
+for(let i=1;i<=5;i++)
+myArray.push(i);
     </script>
 </body>
 </html>
