--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <script>
-// Setup
-const myArr = [2, 3, 4, 5, 6];
-
-// Only change code below this line
-let total =0;
-for(let i = 0;i<myArr.length;i++){
-  total+=myArr[i];
+function multiplyAll(arr) {
+  let product = 1;
+  // Only change code below this line
+  let mul =1;
+for (let i = 0; i < arr.length; i++) {
+  for (let j = 0; j < arr[i].length; j++) {
+    mul *= arr[i][j];
+  }
 }
+  // Only change code above this line
+  return mul;
+}
+
+multiplyAll([[1, 2], [3, 4], [5, 6, 7]]);
 
     </script>
 </body>
