--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
 </head>
 <body>
     <script>
-function multiplyAll(arr) {
-  let product = 1;
-  // Only change code below this line
-  let mul =1;
-for (let i = 0; i < arr.length; i++) {
-  for (let j = 0; j < arr[i].length; j++) {
-    mul *= arr[i][j];
-  }
-}
-  // Only change code above this line
-  return mul;
-}
+// Setup
+const myArray = [];
+let i = 10;
 
-multiplyAll([[1, 2], [3, 4], [5, 6, 7]]);
+// Only change code below this line
+// while (i < 5) {
+//   myArray.push(i);
+//   i++;
+// }
+do{
+  myArray.push(i++);
+}while(i<=10);
 
     </script>
 </body>
