--- a/index.html
+++ b/index.html
@@ -9,19 +9,15 @@
 </head>
 <body>
     <script>
-// Setup
-const myArray = [];
-let i = 10;
-
-// Only change code below this line
-// while (i < 5) {
-//   myArray.push(i);
-//   i++;
-// }
-do{
-  myArray.push(i++);
-}while(i<=10);
-
+function sum(arr, n) {
+  // Only change code below this line
+  if(n <= 0){
+    return 0;
+  }else{
+    return sum(arr,n-1)+arr[n-1];
+  }
+  // Only change code above this line
+}
     </script>
 </body>
 </html>
