--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <script>
-function randomFraction() {
+function randomWholeNum() {
 
 // Only change code below this line
 
-return Math.random();
-
-// Only change code above this line
+return Math.floor(Math.random()*10);
 }
     </script>
 </body>
