Generate Random Whole Numbers within a Range

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <script>
-function randomWholeNum() {
-
-// Only change code below this line
-
-return Math.floor(Math.random()*10);
+function randomRange(myMin, myMax) {
+  // Only change code below this line
+  return Math.floor(Math.random() * (myMax - myMin + 1)) + myMin;
+  // Only change code above this line
 }
     </script>
 </body>
