--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <script>
-function randomRange(myMin, myMax) {
-  // Only change code below this line
-  return Math.floor(Math.random() * (myMax - myMin + 1)) + myMin;
-  // Only change code above this line
+function convertToInteger(str) {
+const a = parseInt(str);
+return a;
 }
+
+convertToInteger("56");
     </script>
 </body>
 </html>
