--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
     <script>
 function convertToInteger(str) {
-const a = parseInt(str);
-return a;
+ return parseInt(str,2);
 }
 
-convertToInteger("56");
+convertToInteger("10011");
     </script>
 </body>
 </html>
