Use Multiple Conditional (Ternary) Operators

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <script>
-function checkEqual(a, b) {
-return a == b? "Equal":"Not Equal";
+function checkSign(num) {
+ return num > 0 ? "positive"
+    : num < 0 ? "negative"
+    : "zero";
 }
 
-checkEqual(1, 2);
+checkSign(10);
     </script>
 </body>
 </html>
