--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
     <script>
-function checkSign(num) {
- return num > 0 ? "positive"
-    : num < 0 ? "negative"
-    : "zero";
+// Only change code below this line
+function countdown(n){
+ if (n < 1) {
+    return [];
+  } else {
+    const arr = countdown(n - 1);
+    arr.unshift(n);
+    return arr;
+  }
 }
-
-checkSign(10);
+// Only change code above this line
     </script>
 </body>
 </html>
